put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -168,38 +168,35 @@ iframe {
 
 
 <style>
-html, body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden; /* Prevents horizontal scrollbar due to overflow */
-    box-sizing: border-box; /* Includes padding and border in the element's total width and height */
-}
-
 /* Flex container for side-by-side iframe display */
 .figure-container2 {
     display: flex;
-    justify-content: center; /* Centers iframes horizontally */
+    justify-content: space-between; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
-    width: 100vw; /* Ensures the container takes the full width of the viewport */
+    width: 100%; /* Ensures the container takes the full width of its parent */
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
 /* Responsive iframes */
-.figure-container2 .responsive-iframe {
-    flex: 0 0 50%; /* The iframe will not grow or shrink and will maintain a base size of 50% */
-    height: 100vh; /* Sets the height to be 100% of the viewport height */
-    box-sizing: border-box; /* Includes padding and border in the element's total width and height */
+.figure-container2 .responsive_iframe {
+    flex: 1; /* Allows the iframe to grow and fill the space evenly */
+    height: 100%; /* Sets iframe height to fill the container */
+    border: none; /* Updates border styling */
 }
+
 
 @media only screen and (max-width: 600px) {
     .figure-container2 {
         flex-direction: column; /* Stacks iframes vertically on small screens */
     }
 
-    .figure-container2 .responsive-iframe {
-        width: 100vw; /* Each iframe should take the full width of the viewport on small screens */
-        height: auto; /* Adjust the height automatically */
-        flex: 0 0 auto; /* Adjust flex setting for small screens */
+    .responsive-iframe {
+        width: 100%; /* Each iframe should take the full width on small screens */
+        height: 50vh; /* Adjust the height for small screens */
+    }
+
+    .figure-container2 iframe {
+        height: 50vh; /* Adjust iframe height on small screens */
     }
 }
 </style>
@@ -230,10 +227,10 @@ html, body {
 
 <div class="figure-container2">
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0;"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0;"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
