--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -170,8 +170,8 @@ iframe {
 <style>
 /* Flex container for side-by-side iframe display */
 .figure-container2 {
-    display: flex;
-    justify-content: space-between; /* Ensures iframes are spaced evenly */
+    display: inline-block;
+    justify-content: space-evenly; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
     width: 100%; /* Ensures the container takes the full width of its parent */
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
@@ -227,10 +227,10 @@ iframe {
 
 <div class="figure-container2">
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
