put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -170,7 +170,7 @@ iframe {
 <style>
 /* Flex container for side-by-side iframe display */
 .figure-container2 {
-    display: inline-block;
+    display: grid;
     justify-content: space-evenly; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
     width: 100%; /* Ensures the container takes the full width of its parent */
