put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -173,7 +173,8 @@ iframe {
     display: flex;
     justify-content: space-evenly; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
-    width: 100%; /* Ensures the container takes the full width of its parent */
+    width: 200%; /* Ensures the container takes the full width of its parent */
+    max-width: 200%;
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
