--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -173,8 +173,8 @@ iframe {
     display: flex;
     justify-content: space-evenly; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
-    width: 200%; /* Ensures the container takes the full width of its parent */
-    max-width: 200%;
+    width: 100%; /* Ensures the container takes the full width of its parent */
+    max-width: 100%;
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
@@ -205,12 +205,12 @@ iframe {
 
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" overflow: "scroll" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 <!-- Example of an iframe using .l-screen-inset for full width with some inset -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" overflow: "scroll" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 <!-- Add more iframes as needed using the appropriate classes for the desired layout -->
