put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -176,6 +176,7 @@ iframe {
     width: 100%; /* Ensures the container takes the full width of its parent */
     max-width: 100%;
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
+    overflow-x: scroll; /* Enables horizontal scrolling if iframes overflow the width of the container */
 }
 
 /* Responsive iframes */
@@ -205,12 +206,12 @@ iframe {
 
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" overflow: "scroll" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 <!-- Example of an iframe using .l-screen-inset for full width with some inset -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" overflow: "scroll" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 <!-- Add more iframes as needed using the appropriate classes for the desired layout -->
