put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -169,6 +169,14 @@ iframe {
 
 <style>
 /* Flex container for side-by-side iframe display */
+
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevents horizontal scrollbar on the body */
+    box-sizing: border-box; /* Includes padding and borders in the element's total width and height */
+}
+
 .figure-container2 {
     display: flex;
     justify-content: space-evenly; /* Ensures iframes are spaced evenly */
@@ -176,7 +184,6 @@ iframe {
     width: 100%; /* Ensures the container takes the full width of its parent */
     max-width: 100%;
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
-    overflow-x: scroll; /* Enables horizontal scrolling if iframes overflow the width of the container */
 }
 
 /* Responsive iframes */
@@ -184,6 +191,7 @@ iframe {
     flex: 1; /* Allows the iframe to grow and fill the space evenly */
     height: 100%; /* Sets iframe height to fill the container */
     border: none; /* Updates border styling */
+    overflow-x: scroll; /* Enables horizontal scrolling if iframes overflow the width of the container */
 }
 
 
