put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -173,8 +173,7 @@ iframe {
 html, body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /* Prevents horizontal scrollbar on the body */
-    box-sizing: border-box; /* Includes padding and borders in the element's total width and height */
+    box-sizing: content-box; /* Includes padding and borders in the element's total width and height */
 }
 
 .figure-container2 {
@@ -191,7 +190,6 @@ html, body {
     flex: 1; /* Allows the iframe to grow and fill the space evenly */
     height: 100%; /* Sets iframe height to fill the container */
     border: none; /* Updates border styling */
-    overflow-x: scroll; /* Enables horizontal scrolling if iframes overflow the width of the container */
 }
 
 
@@ -237,10 +235,10 @@ html, body {
 
 <div class="figure-container2">
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" overflow-x: "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" overflow-x: "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
