--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -233,11 +233,11 @@ html, body {
   </div>
 </div>
 
-<div class="figure-container2">
-  <div class="responsive-iframe">
+<div class="figure-container2" style="width:1000px">
+  <div class="responsive-iframe" style="float:left">
     <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" overflow-x= "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
-  <div class="responsive-iframe">
+  <div class="responsive-iframe" style="float:right">
     <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" overflow-x= "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
