put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -233,7 +233,7 @@ html, body {
   </div>
 </div>
 
-<div class="figure-container2" style="width:1000px">
+<div class="l-screen">
   <div class="responsive-iframe" style="float:left">
     <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" overflow-x= "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
