put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -234,11 +234,11 @@ html, body {
 </div>
 
 <div class="l-screen">
-  <div class="responsive-iframe" style="float:left">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" overflow-x= "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <div class="responsive-iframe">
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 0px width="500px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
-  <div class="responsive-iframe" style="float:right">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" overflow-x= "scroll" scrolling="yes" height= "500px" margin-bottom= 1px width="200%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <div class="responsive-iframe">
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 0px width="500px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
