put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -233,7 +233,7 @@ html, body {
   </div>
 </div>
 
-<div class="l-screen">
+<div class="l-screen-inset" display= "flex">
   <div class="responsive-iframe">
     <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 0px width="500px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
