put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -233,7 +233,7 @@ html, body {
   </div>
 </div>
 
-<div class="l-page" style="display: flex; justify-content: space-evenly; align-items: stretch;">
+<div class="l-page" style="display: flex; grid-column: screen; padding-left: 32px; padding-right: 32px; justify-content: space-evenly; align-items: stretch;">
   <div class="responsive-iframe">
     <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 0px width="500px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
