--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -234,11 +234,11 @@ html, body {
 </div>
 
 <div class="l-page" style="display: flex; grid-column: screen; padding-left: 32px; padding-right: 32px; justify-content: space-evenly; align-items: stretch;">
-  <div class="responsive-iframe">
+  <div class="responsive-iframe" style="padding-right: 50px;">
     <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px width="700px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
-  <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px margin-right= 160px width="700px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <div class="responsive-iframe" style="padding-right: 50px;">
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px  width="700px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
