--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -233,12 +233,12 @@ html, body {
   </div>
 </div>
 
-<div class="l-page" style="display: flex; grid-column: screen; padding-left: 32px; padding-right: 32px; justify-content: space-around; align-items: stretch;">
-  <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px width="1500px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+<div class="l-page" style="display: flex; grid-column: screen; padding-left: 32px; padding-right: 32px; justify-content: space-evenly; align-items: stretch;">
+  <div class="responsive-iframe" style="padding-left: 0 px; padding-right: 0 px; margin-right: 0 px; margin-left: 0 px;">
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px width="1600px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
-  <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px  width="1500px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <div class="responsive-iframe" style="padding-left: 0 px; padding-right: 0 px; margin-right: 0 px; margin-left: 0 px;">
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="no" height= "550px" margin-bottom= 0px  width="1600px" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
