--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
 title: Spatial Projection of Antenna Radiation Patterns
-description: an implementation of 3D projection of antenna radiation patterns onto a spatial region from scratch
+description: a detailed guide to projecting antenna radiation patterns onto spatial regions from the ground up
 giscus_comments: true
 date: 2024-02-23
 
