--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -107,7 +107,7 @@ For larger blocks of code, add a `block` attribute:
 You can always use the default code-highlight using the `highlight` liquid tag:
 
 
-{% highlight javascript %}
+{% highlight python %}
 
 def read_antenna_pattern_file(pattern_folder_dir, pattern_file_name, extension):
     if not os.path.isdir(pattern_folder_dir):
