--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -185,12 +185,10 @@ def rotz(gamma):
                        [np.sin(np.deg2rad(gamma)), np.cos(np.deg2rad(gamma)), 0], [0, 0, 1]])
     return rotmat
 
-
 def rotx(alpha):
     rotmat = np.array([[1, 0, 0], [0, np.cos(np.deg2rad(alpha)), -np.sin(np.deg2rad(alpha))],
                        [0, np.sin(np.deg2rad(alpha)), np.cos(np.deg2rad(alpha))]])
     return rotmat
-
 
 def roty(beta):
     rotmat = np.array([[np.cos(np.deg2rad(beta)), 0, np.sin(np.deg2rad(beta))], [0, 1, 0],
@@ -208,6 +206,85 @@ def find_angle_bw_vecs(vec1, vec2):
     norm2 = np.linalg.norm(vec2)
     angle_deg = np.rad2deg(np.arccos(dot_ / (norm1 * norm2)))
     return angle_deg
+
+{% endhighlight %}
+
+
+
+{% highlight python %}
+
+def add_rad_patt(tirem_preds, map, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
+                 antenna_0_az_bearing_angle, antenna_0_el_deviation_angle_from_zenith, antenna_threeD_gain,
+                 antenna_inclined_tow_bearing_angle=90):
+    (dim1, dim2) = tirem_preds.shape
+    elevs = np.zeros((dim1, dim2))
+    bearings = np.zeros((dim1, dim2))
+    tx_elevation = map[tx_antenna_raster_idx[0], tx_antenna_raster_idx[1]]
+    tx_total_height = tx_elevation + tx_antenna_height
+    assert antenna_0_el_deviation_angle_from_zenith >= 90 and antenna_0_el_deviation_angle_from_zenith <= 180
+
+    beta = antenna_0_el_deviation_angle_from_zenith - 90
+    gamma = antenna_inclined_tow_bearing_angle - 90
+    ant_dir = np.matmul(rotz(gamma), np.matmul(roty(beta), np.array([0, 0, 1])))
+
+    print("Now calculating angles for gain projection. \n")
+    for i in range(dim1):
+        for j in range(dim2):
+            rx_total_height = map[i, j] + rx_antenna_height
+
+            slope = (rx_total_height - tx_total_height) / (
+                        map_res * (np.linalg.norm(np.array([i, j]) - np.array(tx_antenna_raster_idx))))
+
+            # Elevation angle
+
+            vec3_tx_to_rx = np.array(
+                [j - tx_antenna_raster_idx[1], i - tx_antenna_raster_idx[0], rx_total_height - tx_total_height])
+
+            el_angle = find_angle_bw_vecs(vec3_tx_to_rx, ant_dir)
+
+            elevs[i, j] = el_angle  # 90 - np.degrees(math.atan(slope))
+
+            vec_tx_to_rx = np.array([i, j]) - np.array(tx_antenna_raster_idx)
+
+            norm_vec_tx_to_rx = np.linalg.norm(vec_tx_to_rx)
+
+            dot_product = np.dot(vec_tx_to_rx, np.array([1, 0]))
+
+            angle_radians = np.arccos(dot_product / norm_vec_tx_to_rx)
+            angle_degrees = np.degrees(angle_radians)
+
+            if vec_tx_to_rx[1] < 0:
+                angle_degrees = 360 - angle_degrees
+
+            bearings[i, j] = angle_degrees
+
+    bearings = np.nan_to_num(bearings, nan=0)
+    elevs = np.nan_to_num(elevs, nan=0)
+    plotter(elevs, "Elevation before Subtraction")
+
+    print("Now applying the projection. \n")
+    for i in range(dim1):
+        for j in range(dim2):
+            if bearings[i, j] - antenna_0_az_bearing_angle >= 0:
+                bearings[i, j] = bearings[i, j] - antenna_0_az_bearing_angle
+            else:
+                bearings[i, j] = 360 + bearings[i, j] - antenna_0_az_bearing_angle
+
+            if elevs[i, j] - 90 >= 0:
+                elevs[i, j] = elevs[i, j] - 90
+            else:
+                elevs[i, j] = 360 + elevs[i, j] - 90
+
+            bearings[i, j] = round(bearings[i, j])
+            if bearings[i, j] == 360:
+                bearings[i, j] = 359
+
+            elevs[i, j] = round(elevs[i, j])
+            if elevs[i, j] == 360:
+                elevs[i, j] = 359
+            tirem_preds[i, j] = tirem_preds[i, j] + antenna_threeD_gain[(bearings[i, j], elevs[i, j])]
+
+    return tirem_preds
 
 {% endhighlight %}
 
