add code blocks

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -213,7 +213,7 @@ def find_angle_bw_vecs(vec1, vec2):
 
 {% highlight python %}
 
-def add_rad_patt(tirem_preds, map, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
+def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
                  antenna_0_az_bearing_angle, antenna_0_el_deviation_angle_from_zenith, antenna_threeD_gain,
                  antenna_inclined_tow_bearing_angle=90):
     (dim1, dim2) = tirem_preds.shape
@@ -230,7 +230,7 @@ def add_rad_patt(tirem_preds, map, map_res, tx_antenna_raster_idx, tx_antenna_he
     print("Now calculating angles for gain projection. \n")
     for i in range(dim1):
         for j in range(dim2):
-            rx_total_height = map[i, j] + rx_antenna_height
+            rx_total_height = map_[i, j] + rx_antenna_height
 
             slope = (rx_total_height - tx_total_height) / (
                         map_res * (np.linalg.norm(np.array([i, j]) - np.array(tx_antenna_raster_idx))))
@@ -242,7 +242,7 @@ def add_rad_patt(tirem_preds, map, map_res, tx_antenna_raster_idx, tx_antenna_he
 
             el_angle = find_angle_bw_vecs(vec3_tx_to_rx, ant_dir)
 
-            elevs[i, j] = el_angle  # 90 - np.degrees(math.atan(slope))
+            elevs[i, j] = el_angle
 
             vec_tx_to_rx = np.array([i, j]) - np.array(tx_antenna_raster_idx)
 
