--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -210,16 +210,14 @@ def find_angle_bw_vecs(vec1, vec2):
 {% endhighlight %}
 
 
-
 {% highlight python %}
-
 def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
                  antenna_0_az_bearing_angle, antenna_0_el_deviation_angle_from_zenith, antenna_threeD_gain,
                  antenna_inclined_tow_bearing_angle=90):
     (dim1, dim2) = tirem_preds.shape
     elevs = np.zeros((dim1, dim2))
     bearings = np.zeros((dim1, dim2))
-    tx_elevation = map[tx_antenna_raster_idx[0], tx_antenna_raster_idx[1]]
+    tx_elevation = map_[tx_antenna_raster_idx[0], tx_antenna_raster_idx[1]]
     tx_total_height = tx_elevation + tx_antenna_height
     assert antenna_0_el_deviation_angle_from_zenith >= 90 and antenna_0_el_deviation_angle_from_zenith <= 180
 
