add code blocks

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -286,6 +286,119 @@ def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_h
 
 {% endhighlight %}
 
+
+{% highlight python %}
+
+import numpy as np
+import scipy.io as sio
+
+def lon_lat_to_grid_xy(lon, lat, img, column_map):
+    """Function to calculate the local column and row coordinates for lon and lat on a given utm image.
+
+    Usage: x, y, idx = lon_lat_to_grid_xy(lon, lat, img)
+
+    inputs: lon - longitude in decimal degrees (WGS84)
+            lat - latitude in decimal degrees
+            img - image specification structure from create_geoimage
+                ncols: 205
+                nrows: 230
+                xllcorner: 595410
+                yllcorner: 4127730
+                     axis: [595410 601560 4127730 4134630]
+             NODATA_value: NaN
+                 cellsize: 30
+               utmZoneNum: 10
+               utmZoneLtr: 'S'
+            column_map - column names to column index within img
+
+    output:   x - pixel column address on given image
+              y - pixel row address on given image
+              indx - pixel subscript address eg: sub2ind([nrows ncols],y x)
+    indx will be NaN for all x and y not on the image
+
+R. Martin 11/2001
+    """
+    # Project image coordinates
+    # projection = img.projection if img.hasattr('projection') else 'UTM'
+    projection = img[column_map['projection']] if 'projection' in column_map else 'UTM'
+    if projection == 'UTM':
+        # ue, un, zn, zl = wgs84_to_utm(lon, lat, img.utmZoneNum)
+        ue, un, zn, zl = wgs84_to_utm(lon, lat, img[column_map['utmZoneNum']])
+    elif projection == 'OSGB36':
+        pass
+        # ue, un = wgs84_to_osgb36(lon, lat)
+    else:
+        print('ERROR! lon_lat_to_grid_xy: unrecognized projection')
+        return np.array([]), np.array([]), np.array([])
+
+    cell_size = img[column_map['cellsize']]
+    nrows = img[column_map['nrows']]
+    ncols = img[column_map['ncols']]
+
+    if 'xllcorner' in column_map and 'yllcorner' in column_map:
+        xOrigin = img[column_map['xllcorner']] - cell_size / 2
+        yOrigin = img[column_map['yllcorner']] - cell_size / 2
+    elif 'xllcenter' in column_map and 'yllcenter' in column_map:
+        xOrigin = img[column_map['xllcenter']] - cell_size
+        yOrigin = img[column_map['yllcenter']] - cell_size
+    else:
+        xOrigin = 0
+        yOrigin = 0
+
+    xLocal = ue - xOrigin
+    yLocal = un - yOrigin
+
+    x = int(np.rint(xLocal / cell_size))
+    y = int(np.rint(yLocal / cell_size))
+
+    # CHECK THIS Convert to subscript
+    # is_good = 1 <= x <= ncols and 1 <= y <= nrows
+    # idx = np.zeros((len(is_good), 1)) * np.NaN
+    # if np.any(is_good):
+    #     idx[is_good] = sub2ind([nrows, ncols], y[is_good], x[is_good])
+    idx = 0  # NOT SURE
+
+    return x, y, idx
+
+
+def main():
+    threeD_pat = read_antenna_pattern_file("./", "aw3939_3600_T0.msi", "msi")
+
+    # Load map structure from .mat file
+    map_struct = sio.loadmat("SLCmap_5May2022.mat")['SLC']
+
+    # Extract SLC data and create a column map for easy access
+    SLC = map_struct[0][0]
+    column_map = dict(zip([name for name in SLC.dtype.names], [i for i in range(len(SLC.dtype.names))]))
+
+    # Calculate the map data
+    map_ = SLC[column_map['dem']] + 0.3048 * SLC[column_map['hybrid_bldg']]
+
+    # Define additional variables for the add_rad_patt function
+    map_res = SLC[column_map["cellsize"]]
+    tx_antenna_height = 3
+    rx_antenna_height = 1.5
+    tirem_preds = np.zeros(map.shape)
+    antenna_0_az_bearing_angle = 120
+    antenna_0_el_deviation_angle_from_zenith = 90
+    antenna_inclined_tow_bearing_angle=90
+    antenna_threeD_gain = threeD_pat
+    endpoint_coords = [40.76895, -111.84167] # example basestation coordinate
+    [BS_x, BS_y, indx] = lon_lat_to_grid_xy(endpoint_coords[1], endpoint_coords[0], SLC,
+                                        column_map)  # establish basestation pixel location.
+
+    tx_antenna_raster_idx = [BS_y, BS_x]
+
+    add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
+                 antenna_0_az_bearing_angle, antenna_0_el_deviation_angle_from_zenith, antenna_threeD_gain,
+                 antenna_inclined_tow_bearing_angle=90)
+
+if __name__ == "__main__":
+    main()
+
+{% endhighlight %}
+
+
 ***
 
 ## Interactive Plots
