add in progress warning

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: Spatial Projection of Antenna Radiation Patterns
+title: Spatial Projection of Antenna Radiation Patterns - IN PROGRESS
 description: a detailed guide to projecting antenna radiation patterns onto spatial regions from the ground up
 giscus_comments: true
 date: 2024-02-23
