add visitor count

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -362,7 +362,7 @@ R. Martin 11/2001
 {% endhighlight %}
 
 
-<p>Page views: <span id="visitCount">loading...</span></p>
+<div id="visits">Page views: loading...</div>
 
 {% highlight python %}
 
