--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -106,6 +106,18 @@ For larger blocks of code, add a `block` attribute:
 **Note:** `<d-code>` blocks do not look good in the dark mode.
 You can always use the default code-highlight using the `highlight` liquid tag:
 
+### Import Libraries
+{% highlight python %}
+
+import numpy as np
+import scipy.io as sio
+import os
+import warnings
+from collections import defaultdict
+from tqdm import tqdm
+
+{% endhighlight %}
+
 
 {% highlight python %}
 
@@ -288,9 +300,6 @@ def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_h
 
 
 {% highlight python %}
-
-import numpy as np
-import scipy.io as sio
 
 def lon_lat_to_grid_xy(lon, lat, img, column_map):
     """Function to calculate the local column and row coordinates for lon and lat on a given utm image.
