enable fast copy on code blocks

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -210,20 +210,14 @@ def roty(beta):
 {% endhighlight %}
 
 
-<div class="code-container">
-  <button class="copy-btn" onclick="copyToClipboard(this)">Copy</button>
-  <pre><code>
-{% highlight python %}
+<pre><code class="language-python">
 def find_angle_bw_vecs(vec1, vec2):
     dot_ = np.dot(vec1, vec2)
     norm1 = np.linalg.norm(vec1)
     norm2 = np.linalg.norm(vec2)
     angle_deg = np.rad2deg(np.arccos(dot_ / (norm1 * norm2)))
     return angle_deg
-{% endhighlight %}
-  </code></pre>
-</div>
-
+</code></pre>
 
 
 {% highlight python %}
