enable fast copy on code blocks

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -208,16 +208,29 @@ def roty(beta):
     return rotmat
 
 {% endhighlight %}
+pre {
+  position: relative;
+}
 
+.copy {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+  /* Further styling */
+}
 
-<pre><code class="language-python">
+<pre>
+<code>
 def find_angle_bw_vecs(vec1, vec2):
     dot_ = np.dot(vec1, vec2)
     norm1 = np.linalg.norm(vec1)
     norm2 = np.linalg.norm(vec2)
     angle_deg = np.rad2deg(np.arccos(dot_ / (norm1 * norm2)))
     return angle_deg
-</code></pre>
+</code>
+</pre>
+
 
 
 {% highlight python %}
