enable fast copy on code blocks

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -208,6 +208,9 @@ def roty(beta):
     return rotmat
 
 {% endhighlight %}
+
+<style>
+
 pre {
   position: relative;
 }
@@ -219,6 +222,7 @@ pre {
   cursor: pointer;
   /* Further styling */
 }
+</style>
 
 <pre>
 <code>
