enable fast copy on code blocks

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -209,31 +209,35 @@ def roty(beta):
 
 {% endhighlight %}
 
-<style>
 
-pre {
+<style>
+.code-container {
   position: relative;
 }
 
-.copy {
+.copy-btn {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 5px; /* Adjust based on padding */
+  right: 5px; /* Adjust based on padding */
   cursor: pointer;
-  /* Further styling */
+  /* Add more styling here */
 }
 </style>
 
-<pre>
-<code>
+<div class="code-container">
+  <button class="copy-btn" onclick="copyToClipboard(this)">Copy</button>
+  <pre><code>
+{% highlight python %}
 def find_angle_bw_vecs(vec1, vec2):
     dot_ = np.dot(vec1, vec2)
     norm1 = np.linalg.norm(vec1)
     norm2 = np.linalg.norm(vec2)
     angle_deg = np.rad2deg(np.arccos(dot_ / (norm1 * norm2)))
     return angle_deg
-</code>
-</pre>
+{% endhighlight %}
+  </code></pre>
+</div>
+
 
 
 
