complete the code part of the post

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -119,6 +119,8 @@ from tqdm import tqdm
 {% endhighlight %}
 
 
+### Read Antenna Pattern Files (.msi, .pat, and .ana)
+
 {% highlight python %}
 
 def read_antenna_pattern_file(pattern_folder_dir, pattern_file_name, extension):
@@ -185,11 +187,26 @@ def read_antenna_pattern_file(pattern_folder_dir, pattern_file_name, extension):
                 for el in elevation_gain:
                     threeD_pat[(az, el)] = azimuth_gain[az] + np.mean(elevation_gain[el])
 
+    fig = plt.figure(layout='constrained')
+    ax1 = fig.add_subplot(1, 1, 1, projection='polar')
+    ax1.set_theta_direction(-1)
+    theta = np.array(list(elevation_gain.keys())) * np.pi / 180
+    ax1.plot(theta, np.array(list(elevation_gain.values())))
+    plt.title("Elevation Angles vs Gain (Polar Plot)")
+    plt.show()
+
+    fig = plt.figure(layout='constrained')
+    ax1 = fig.add_subplot(1, 1, 1, projection='polar', theta_offset=np.pi / 2)
+    ax1.set_theta_direction(-1)
+    ax1.plot(np.array(list(azimuth_gain.keys())) * np.pi / 180, np.array(list(azimuth_gain.values())))
+    plt.title("Azimuth Angles vs Gain (Polar Plot)")
+    plt.show()
+
     return threeD_pat
 
 {% endhighlight %}
 
-
+### Define 3D Rotation Functions for Projection
 {% highlight python %}
 
 def rotz(gamma):
@@ -224,6 +241,7 @@ def roty(beta):
 }
 </style>
 
+### Function for Finding The Angle Between Two Vectors
 <div class="code-container">
   <button class="copy-btn" onclick="copyToClipboard(this)">Copy</button>
   <pre><code>
@@ -239,13 +257,12 @@ def find_angle_bw_vecs(vec1, vec2):
 </div>
 
 
-
-
+### Calculating the Antenna Radiation Pattern Projection
 {% highlight python %}
-def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
+def add_rad_patt(initial_preds, map_, map_res, UTM_boundaries, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
                  antenna_0_az_bearing_angle, antenna_0_el_deviation_angle_from_zenith, antenna_threeD_gain,
                  antenna_inclined_tow_bearing_angle=90):
-    (dim1, dim2) = tirem_preds.shape
+    (dim1, dim2) = initial_preds.shape
     elevs = np.zeros((dim1, dim2))
     bearings = np.zeros((dim1, dim2))
     tx_elevation = map_[tx_antenna_raster_idx[0], tx_antenna_raster_idx[1]]
@@ -257,7 +274,7 @@ def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_h
     ant_dir = np.matmul(rotz(gamma), np.matmul(roty(beta), np.array([0, 0, 1])))
 
     print("Now calculating angles for gain projection. \n")
-    for i in range(dim1):
+    for i in tqdm(range(dim1)):
         for j in range(dim2):
             rx_total_height = map_[i, j] + rx_antenna_height
 
@@ -289,10 +306,10 @@ def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_h
 
     bearings = np.nan_to_num(bearings, nan=0)
     elevs = np.nan_to_num(elevs, nan=0)
-    plotter(elevs, "Elevation before Subtraction")
-
+    #plotter(elevs, "Elevation before Subtraction")
+    final_preds = np.zeros_like(initial_preds)
     print("Now applying the projection. \n")
-    for i in range(dim1):
+    for i in tqdm(range(dim1)):
         for j in range(dim2):
             if bearings[i, j] - antenna_0_az_bearing_angle >= 0:
                 bearings[i, j] = bearings[i, j] - antenna_0_az_bearing_angle
@@ -311,9 +328,140 @@ def add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_h
             elevs[i, j] = round(elevs[i, j])
             if elevs[i, j] == 360:
                 elevs[i, j] = 359
-            tirem_preds[i, j] = tirem_preds[i, j] + antenna_threeD_gain[(bearings[i, j], elevs[i, j])]
+            final_preds[i, j] = initial_preds[i, j] + antenna_threeD_gain[(bearings[i, j], elevs[i, j])]
+    N1 = map_.shape[0]
+    N2 = map_.shape[1]
+    en = UTM_boundaries
 
-    return tirem_preds
+    UTM_long = np.linspace(en[0, 2], en[0, 3] - map_res, N1)
+    UTM_lat = np.linspace(en[0, 0], en[0, 1] - map_res, N2)
+    plotter(final_preds, "Projected Antenna Gain", UTM_long, UTM_lat, "dBi")
+    return final_preds
+
+{% endhighlight %}
+
+
+### Utility Functions for Coordinate Transformation
+{% highlight python %}
+
+def get_utm_letter(lat):
+    """ References the UTM letter designator for each latitude """
+    ch = 'XWVUTSRQPNMLKJHGFEDC'[::-1]
+    idx = int(np.floor((lat + 80) / 8)) + 1
+    lat = np.array([lat])
+    size = lat.flatten().shape[0]
+    zone_letter = np.reshape(np.array(['Z' for _ in range(size)]), lat.shape)
+    valid = 0 < idx <= len(ch) and not np.isnan(idx)
+    if valid:
+        zone_letter = ch[idx]
+    return zone_letter
+{% endhighlight %}
+
+
+{% highlight python %}
+
+def wgs84_to_utm(long, lat, zone):
+    """ function utm_easting, utm_northing, zone_number, zone_letter = wgs84_to_utm(long, lat, zone)
+
+    Usage: utm_easting, utm_northing, zone_number, zone_letter = wgs84_to_utm(long, lat)
+
+    zone > 0  all eastings projected into specified zone, may be out of range
+    zone < 0  all eastings projected into minimum zone, output will be positive
+    zone == 0 (default) returns correct zone number for all values
+
+    Converts WGS84 lat/lon to UTM coordinates using code adapted from:
+        Chuck Gantz- chuck.gantz@globalstar.com
+        Equations from USGS Bulletin 1532
+
+    R. Martin, 11/2001
+
+    08/08/02  forced all output to be minimum zone unless 'zone' is specified
+    09/11/02  zone>0, zone<0, zone==0 (default)
+    """
+
+    # CHECK THIS
+    if long is None:
+        return np.array([]), np.array([]), np.array([]), np.array([])
+
+    force_zone = [] if zone is None else 0
+
+    # constants for WGS84
+    a = 6378137  # equatorial radius
+    ecc_squared = 0.00669438  # eccentricity squared
+    k0 = 0.9996
+    pi_fourth = np.pi / 4
+    deg2rad = np.pi / 180
+    rad2deg = 180.0 / np.pi
+
+    # long_origin
+    # ecc_prime_squared
+    # N, T, C, A, M
+
+    # Make sure the longitude is between - 180.00 and 179.9
+    long_temp = long  # (Long + 180) - fix((Long + 180) / 360) * 360 - 180;
+    lat_rad = lat * deg2rad
+    long_rad = long_temp * deg2rad
+
+    # compute the UTM Zone from the latitude and longitude
+    zone_number = np.floor((long_temp + 180) / 6) + 1
+    if 30 < zone_number < 38:
+        # compute special zones
+        sz32 = (56.0 <= lat < 64.0 and 3.0 <= long_temp < 12.0)
+        sz = (72.0 <= lat < 84.0)
+        sz31 = (0.0 <= long_temp < 9.0)
+        sz33 = (9.0 <= long_temp < 21.0)
+        sz35 = (21.0 <= long_temp < 33.0)
+        sz37 = (33.0 <= long_temp < 42.0)
+
+        zone_number[sz32] = 32
+        zone_number[sz and sz31] = 31
+        zone_number[sz and sz33] = 33
+        zone_number[sz and sz35] = 35
+        zone_number[sz and sz37] = 37
+
+    # force all zone numbers to be identical
+    # zone_number = zone_number * 0 + np.floor(np.median(zone_number));
+    if force_zone > 0:
+        zone_number = np.ones(long_temp.shape) * force_zone
+    elif force_zone < 0:
+        use_zone = min(zone_number(zone_number > 0))
+        zone_number = np.ones(long_temp.shape) * use_zone
+
+    # projection origin
+    long_origin = (zone_number - 1) * 6 - 180 + 3  # +3 puts origin in middle of zone
+    long_origin_rad = long_origin * deg2rad
+    zone_letter = get_utm_letter(lat)
+
+    # here it is ...
+    ecc_prime_squared = ecc_squared / (1 - ecc_squared)
+    N = a / np.sqrt(1 - ecc_squared * (np.sin(lat_rad) ** 2))
+    T = np.tan(lat_rad) * np.tan(lat_rad)
+    C = ecc_prime_squared * np.cos(lat_rad) ** 2
+    A = np.cos(lat_rad) * (long_rad - long_origin_rad)
+    M = a * ((1 - ecc_squared / 4 - 3 * ecc_squared * ecc_squared / 64 - 5 * ecc_squared * ecc_squared * ecc_squared /
+              256) * lat_rad - (3 * ecc_squared / 8 + 3 * ecc_squared * ecc_squared / 32 + 45 * ecc_squared *
+                                ecc_squared * ecc_squared / 1024) * np.sin(2 * lat_rad) + (15 * ecc_squared *
+                                                                                           ecc_squared / 256 + 45 *
+                                                                                           ecc_squared * ecc_squared *
+                                                                                           ecc_squared / 1024) *
+             np.sin(4 * lat_rad) - (35 * ecc_squared * ecc_squared * ecc_squared / 3072) * np.sin(6 * lat_rad))
+
+    utm_easting = (k0 * N * (A + (1 - T + C) * A * A * A / 6 + (5 - 18 * T + T * T + 72 * C - 58 * ecc_prime_squared) *
+                             A * A * A * A * A / 120) + 500000.0)
+
+    utm_northing = (k0 * (M + N * np.tan(lat_rad) * (A * A / 2 + (5 - T + 9 * C + 4 * C * C) * A * A * A * A / 24 +
+                                                     (61 - 58 * T + T * T + 600 * C - 330 * ecc_prime_squared) * A * A
+                                                     * A * A * A * A / 720)))
+
+    # 10000000 meter offset for southern hemisphere
+    if lat < 0:
+        utm_northing += 10000000.0
+
+    # round to nearest cm
+    utm_easting = np.rint(utm_easting * 100) / 100
+    utm_northing = np.rint(utm_northing * 100) / 100
+
+    return utm_easting, utm_northing, zone_number, zone_letter
 
 {% endhighlight %}
 
@@ -346,6 +494,18 @@ def lon_lat_to_grid_xy(lon, lat, img, column_map):
 
 R. Martin 11/2001
     """
+    # CHECK THIS
+    # my_img = Path('img')
+    # if not my_img.is_file():
+    #     img = np.array([])
+
+    # Image must be matrix
+    # if isinstance(img, list):
+    #     img = np.array(img)
+    # if not isinstance(img, (pd.Series, np.ndarray)):
+    #     print('ERROR! lon_lat_to_grid_xy: must provide coordinate system reference')
+    #     return np.array([]), np.array([]), np.array([])
+
     # Project image coordinates
     # projection = img.projection if img.hasattr('projection') else 'UTM'
     projection = img[column_map['projection']] if 'projection' in column_map else 'UTM'
@@ -387,10 +547,11 @@ R. Martin 11/2001
     idx = 0  # NOT SURE
 
     return x, y, idx
+
 {% endhighlight %}
 
 
-
+### Main Function
 {% highlight python %}
 
 def main():
@@ -410,7 +571,7 @@ def main():
     map_res = SLC[column_map["cellsize"]]
     tx_antenna_height = 3
     rx_antenna_height = 1.5
-    tirem_preds = np.zeros(map.shape)
+    tirem_preds = np.zeros(map_.shape)
     antenna_0_az_bearing_angle = 120
     antenna_0_el_deviation_angle_from_zenith = 90
     antenna_inclined_tow_bearing_angle=90
@@ -421,7 +582,7 @@ def main():
 
     tx_antenna_raster_idx = [BS_y, BS_x]
 
-    add_rad_patt(tirem_preds, map_, map_res, tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
+    add_rad_patt(tirem_preds, map_, map_res, SLC[column_map["axis"]], tx_antenna_raster_idx, tx_antenna_height, rx_antenna_height,
                  antenna_0_az_bearing_angle, antenna_0_el_deviation_angle_from_zenith, antenna_threeD_gain,
                  antenna_inclined_tow_bearing_angle=90)
 
