complete the code part of the post

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -242,9 +242,6 @@ def roty(beta):
 </style>
 
 ### Function for Finding The Angle Between Two Vectors
-<div class="code-container">
-  <button class="copy-btn" onclick="copyToClipboard(this)">Copy</button>
-  <pre><code>
 {% highlight python %}
 def find_angle_bw_vecs(vec1, vec2):
     dot_ = np.dot(vec1, vec2)
@@ -253,8 +250,6 @@ def find_angle_bw_vecs(vec1, vec2):
     angle_deg = np.rad2deg(np.arccos(dot_ / (norm1 * norm2)))
     return angle_deg
 {% endhighlight %}
-  </code></pre>
-</div>
 
 
 ### Calculating the Antenna Radiation Pattern Projection
@@ -341,7 +336,69 @@ def add_rad_patt(initial_preds, map_, map_res, UTM_boundaries, tx_antenna_raster
 {% endhighlight %}
 
 
-### Utility Functions for Coordinate Transformation
+
+### Utility Functions
+
+##### Plotting
+
+{% highlight python %}
+
+def plotter(value_map, title, UTM_long, UTM_lat, colorbar_title):
+    value_map = value_map[::3, ::3]
+    fig = px.imshow(value_map[1:value_map.shape[0] - 1, 1:value_map.shape[1] - 1], origin='lower',title=title)
+    fig.update_layout(coloraxis_colorbar_x=0.61)
+    fig.update_layout(coloraxis_colorbar_y=0.5)
+    fig.update_layout(height=500)
+    UTM_long = np.squeeze(UTM_long)
+    UTM_lat = np.squeeze(UTM_lat)
+
+    interval = max(1, len(UTM_lat) // 10)  # interval for ticks to avoid overlap, you can adjust if needed
+    fig.update_xaxes(
+        tickvals=list(range(0, len(UTM_lat), interval)),
+        ticktext=UTM_lat[::interval],
+        title_text="UTM<sub>E</sub> [m]",
+        title_standoff=10,
+        tickfont=dict(size=14),
+        side='bottom'  # to place the xlabel at the bottom of the plot
+    )
+    fig.update_layout(
+        title={
+            'y': 1.0,
+            'x': 0.5,
+            'xanchor': 'center',
+            'yanchor': 'top',
+            'font': dict(
+                family="Times New Roman",  # Set font family to Times New Roman
+                size=25
+            )
+        }
+    )
+
+    interval = max(1, len(UTM_long) // 10)  # interval for ticks to avoid overlap, you can adjust if needed
+    fig.update_yaxes(
+        tickvals=list(range(0, len(UTM_long), interval)),
+        ticktext=UTM_long[::interval],
+        title_text="UTM<sub>N</sub> [m]",
+        title_standoff=10,
+        tickfont=dict(size=14)
+    )
+    fig.update_layout(
+        coloraxis_colorbar_x=0.64,
+        coloraxis_colorbar_y=0.5,
+        coloraxis_colorbar=dict(
+            title=colorbar_title, # Add label to the colorbar
+            title_side = "right"
+        ),
+
+        height=500
+    )
+
+    fig.show()
+    return None
+{% endhighlight %}
+
+
+##### Coordinate Transformations
 {% highlight python %}
 
 def get_utm_letter(lat):
