--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -195,7 +195,7 @@ html, body {
 
 <!-- Add more iframes as needed using the appropriate classes for the desired layout -->
 
-### Read Antenna Pattern Files (.msi, .pat, and .ana)
+### Reading Antenna Pattern Files (.msi, .pat, and .ana)
 
 {% highlight python %}
 
