--- a/_posts/2024-3-7-random.md
+++ b/_posts/2024-3-7-random.md
@@ -11,7 +11,7 @@ authors:
       name: ECE, Georgia Tech
 
 
-bibliography: 2018-12-22-distill.bib
+bibliography: 2024-3-7-random.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
